package edu.hitsz.props;

public interface PropCreator {
         public abstract AbstractProps createProp();

}
